--- a/.github/workflows/OWRT-TT.yml
+++ b/.github/workflows/OWRT-TT.yml
@@ -17,12 +17,12 @@ jobs:
       #编译平台
       OWRT_TARGET: Rockchip
       #默认主题
-      OWRT_THEME: deign
+      OWRT_THEME: argon
       #默认主机名
-      OWRT_NAME: OWRT
+      OWRT_NAME: OpenWrt
       #默认密码，仅作展示，请勿乱改
       OWRT_PW: 无
       #默认地址
-      OWRT_IP: 192.168.10.1
+      OWRT_IP: 10.0.0.77
       #默认源码
       OWRT_URL: https://github.com/immortalwrt/immortalwrt.git
