--- a/.github/workflows/OWRT-TC.yml
+++ b/.github/workflows/OWRT-TC.yml
@@ -32,6 +32,7 @@ env:
   OWRT_URL: ${{inputs.OWRT_URL}}
   OWRT_PW: ${{inputs.OWRT_PW}}
   OWRT_IP: ${{inputs.OWRT_IP}}
+  TZ: Asia/Shanghai
 
 jobs:
   owrt_core:
