--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -41,16 +41,16 @@ jobs:
       - name: Checkout Projects
         uses: actions/checkout@main
 
-      - name: Free Disk Space
-        uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: true
-          dotnet: true
-          android: true
-          haskell: true
-          swap-storage: true
-          docker-images: true
-          large-packages: true
+      #- name: Free Disk Space
+      #  uses: jlumbroso/free-disk-space@main
+      #  with:
+      #    tool-cache: true
+      #    dotnet: true
+      #    android: true
+      #    haskell: true
+      #    swap-storage: true
+      #    docker-images: true
+      #    large-packages: true
 
       - name: Initialization Environment
         env:
