--- a/.github/workflows/OWRT-ONE.yml
+++ b/.github/workflows/OWRT-ONE.yml
@@ -29,19 +29,19 @@ jobs:
     uses: ./.github/workflows/WRT-CORE.yml
     with:
       #编译平台
-      WRT_TARGET: MEDIATEK
+      WRT_TARGET: X64
       #默认主题
       WRT_THEME: argon
       #默认主机名
-      WRT_NAME: OWRT
+      WRT_NAME: OpenWrt
       #默认WIFI名
-      WRT_WIFI: OWRT
+      WRT_WIFI: OpenWrt
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: 10.0.0.77
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
-      WRT_REPO: https://github.com/immortalwrt/immortalwrt.git
+      WRT_REPO: https://github.com/coolsnowwolf/lede.git
       #源码分支
       WRT_BRANCH: master
       #插件调整
